--- a/style.css
+++ b/style.css
@@ -28,3 +28,13 @@ span {
 .half-width img {
   width: 100%;
 }
+a {
+  margin: 20px 20px 20px 20px;
+  background-image: linear-gradient(purple, tomato);
+  padding: 10px 40px;
+  font-weight: 700;
+  color: aliceblue;
+  text-decoration: none;
+  margin-left: 45%;
+  border-radius: 5px;
+}
